--- a/my-app/src/components/navbar/NavbarStyles.css
+++ b/my-app/src/components/navbar/NavbarStyles.css
@@ -6,6 +6,8 @@ nav {
     display: flex;
     justify-content: left;
     align-items: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .menu {
@@ -15,6 +17,8 @@ nav {
 }
 
 li {
+    display: flex;
+    align-items: center;
     list-style-type: none;
     margin: 20px 20px 20px 20px;
 }
@@ -31,8 +35,8 @@ nav a.active {
 }
 
 .logo_img {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     margin: 5px 10px 5px 30px;
 }
 
